--- a/work.html
+++ b/work.html
@@ -181,7 +181,7 @@
       </p>
 
       <p>
-        My Roles: Co-producer, Co-writer, Editor
+        My Roles: Co-producer, Co-writer, Editor<br />
         Released: March 19, 2022<br />
         Directed by Erica Stevenson
       </p>
