--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="panel">
-      <p><strong>Effective Date:</strong> [Insert Date]</p>
+      <p><strong>Effective Date:</strong> 01/01/2026</p>
 
       <p>
         This Privacy Policy describes how information is collected, used, and protected
@@ -92,7 +92,7 @@
       <p>
         For questions regarding this policy, contact:
         <br />
-        <strong>[Your Email Address]</strong>
+        <strong>hello@darrensteptoe.com</strong>
       </p>
     </section>
 
