--- a/terms.html
+++ b/terms.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="panel">
-      <p><strong>Effective Date:</strong> [Insert Date]</p>
+      <p><strong>Effective Date:</strong> 01/01/2026</p>
 
       <h2 class="h2">Acceptance</h2>
       <p>
