--- a/refund.html
+++ b/refund.html
@@ -39,7 +39,7 @@
       <h2 class="h2">Billing Issues</h2>
       <p>
         If you believe a billing error has occurred, contact
-        <strong>[Your Email Address]</strong> within 7 days.
+        <strong>hello@darrensteptoe.com</strong> within 7 days.
       </p>
 
     </section>
