--- a/work.html
+++ b/work.html
@@ -174,6 +174,8 @@
       <h2 class="h2">Documentary Work</h2>
 
       <p>
+        <b>The Last to Know (2022)</b>
+        
         Join 89-year-old retired educator and community activist,
         Dr. Opal Lee (oft referred to as the “Grandmother of Juneteenth”), as she
         begins a years-long campaign to make her vision of Juneteenth becoming a
