--- a/work.html
+++ b/work.html
@@ -254,9 +254,25 @@ The project became a core part of the curriculum, engaging students in fieldwork
       </p>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" style="text-align:center;">
       <p>© <span id="year"></span> Darren Steptoe</p>
+      <p style="font-size:12px;opacity:.7;margin-top:6px;">
+        <a href="./privacy.html">Privacy</a> |
+        <a href="./terms.html">Terms</a> |
+        <a href="./refund.html">Refund</a>
+      </p>
     </footer>
+
+  </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
+  <script src="./search.js"></script>
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+</body>
+</html>
 
   </main>
 
