--- a/index.html
+++ b/index.html
@@ -99,15 +99,25 @@
       </div>
     </section>
 
-    <footer class="footer" style="display:flex;justify-content:space-between;align-items:flex-end;flex-wrap:wrap;gap:8px;">
+    <footer class="footer" style="text-align:center;">
       <p>© <span id="year"></span> Darren Steptoe</p>
-
-      <p style="font-size:12px;opacity:.7;text-align:right;">
+      <p style="font-size:12px;opacity:.7;margin-top:6px;">
         <a href="./privacy.html">Privacy</a> |
         <a href="./terms.html">Terms</a> |
         <a href="./refund.html">Refund</a>
       </p>
     </footer>
+
+  </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
+  <script src="./search.js"></script>
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+</body>
+</html>
 
   </main>
 
