--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
     <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
       <ul class="links">
+        <li><a href="./services.html">Services</a></li>
         <li><a href="./work.html">Work</a></li>
-        <li><a href="./books.html">Books</a></li>
-        <li><a href="./research.html">Projects & Research</a></li>
-        <li><a href="./livestream.html">Livestream</a></li>
-        <li><a href="./fantasy.html">Fantasy Football</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./writing.html">Writing</a></li>
+        <li><a href="./projects.html">Projects &amp; Research</a></li>
+        <li><a href="./more.html">More</a></li>
       </ul>
     </section>
 
@@ -54,49 +53,10 @@
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
       <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, research, and more. Check in periodically for updates.
+        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
+        acquainted with me and my work, providing effortless access to my creations including short films,
+        livestreams, research, and more. Check in periodically for updates.
       </p>
-    </section>
-
-    <!-- Payment -->
-    <section class="panel" aria-label="Payments" style="position:relative;">
-      <h2 class="h2">Payment</h2>
-
-      <img
-        src="./assets/Stripe_Logo,_revised_2016.svg.png"
-        alt="Stripe"
-        style="position:absolute;top:16px;right:16px;height:20px;"
-      />
-
-      <p>
-        For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
-      </p>
-      <p>
-        <a
-          href="https://pay.darrensteptoe.com/b/8x26oJ1DL6vHcraft02Fa00"
-          target="_blank"
-          rel="noopener"
-        >
-          Pay Invoice ↗
-        </a>
-      </p>
-    </section>
-
-    <!-- Schedule -->
-    <section class="panel" aria-label="Schedule" style="position:relative;">
-      <h2 class="h2">Schedule</h2>
-
-      <img
-        src="./assets/Calendly_logo.png"
-        alt="Calendly"
-        style="position:absolute;top:16px;right:16px;height:20px;"
-      />
-
-      <div
-        class="calendly-inline-widget"
-        data-url="https://calendly.com/me--ujg"
-        style="min-width:320px;height:700px;">
-      </div>
     </section>
 
     <footer class="footer" style="text-align:center;">
@@ -115,17 +75,5 @@
   </script>
 
   <script src="./search.js"></script>
-  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-</body>
-</html>
-
-  </main>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
-
-  <script src="./search.js"></script>
-  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
 </body>
 </html>
