--- a/more.html
+++ b/more.html
@@ -8,110 +8,123 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <style>
-    .fantasyBig {
-      padding: 0;
-      overflow: hidden;
+    .fantasyBig{ padding:0; overflow:hidden; }
+
+    .fantasyHead{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap:14px;
+      padding:18px 16px 14px;
+      border-bottom:1px solid rgba(255,255,255,.08);
     }
 
-    .fantasyHead {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 14px;
-      padding: 16px 16px 12px;
-      border-bottom: 1px solid rgba(255,255,255,.08);
+    .fantasyTitleWrap{ min-width:0; }
+
+    .fantasyTitle{
+      margin:0;
+      font-size:20px;
+      font-weight:900;
+      line-height:1.12;
+      letter-spacing:.01em;
     }
 
-    .fantasyHeadLeft {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      min-width: 0;
+    .fantasySub{
+      margin:8px 0 0;
+      font-size:14px;
+      opacity:.86;
+      line-height:1.35;
     }
 
-    .fantasyLogoTop {
-      height: 22px;
-      width: auto;
-      display: block;
-      flex: 0 0 auto;
-      opacity: .95;
+    .fantasyLogoTop{
+      height:26px;
+      width:auto;
+      display:block;
+      flex:0 0 auto;
+      opacity:.95;
+      margin-top:2px;
     }
 
-    .fantasyTitleWrap {
-      min-width: 0;
+    .fantasyBody{
+      padding:18px 16px 16px;
+      display:grid;
+      gap:16px;
     }
 
-    .fantasyTitle {
-      margin: 0;
-      font-size: 18px;
-      font-weight: 900;
-      line-height: 1.15;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    .fantasySection{
+      padding:16px 16px;
+      border:1px solid rgba(255,255,255,.08);
+      background:rgba(255,255,255,.03);
+      border-radius:10px;
     }
 
-    .fantasySub {
-      margin: 6px 0 0;
-      font-size: 13px;
-      opacity: .85;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    .fantasyH3{
+      margin:0 0 12px;
+      font-size:15px;
+      font-weight:900;
+      letter-spacing:.10em;
+      text-transform:uppercase;
+      opacity:.92;
     }
 
-    .fantasyBody {
-      padding: 16px;
-      display: grid;
-      gap: 14px;
+    .fantasySection p{ margin:0 0 10px; line-height:1.5; }
+    .fantasySection p:last-child{ margin-bottom:0; }
+
+    .fantasyList{
+      margin:0;
+      padding-left:18px;
+    }
+    .fantasyList li{
+      margin:7px 0;
+      line-height:1.45;
     }
 
-    .fantasySection {
-      padding: 14px 14px;
-      border: 1px solid rgba(255,255,255,.08);
-      background: rgba(255,255,255,.03);
-      border-radius: 10px;
+    .fantasyRow{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:16px;
+      align-items:start;
     }
 
-    .fantasySection h3 {
-      margin: 0 0 10px;
-      font-size: 14px;
-      letter-spacing: .10em;
-      text-transform: uppercase;
-      opacity: .9;
+    .fantasyMetaGrid{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:10px 14px;
     }
 
-    .fantasySection p {
-      margin: 0 0 10px;
+    .kv{
+      margin:0;
+      padding:0;
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
+      line-height:1.45;
     }
-    .fantasySection p:last-child {
-      margin-bottom: 0;
+    .kv b{ font-weight:900; }
+
+    .joinRow{
+      display:flex;
+      flex-wrap:wrap;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      margin-top:12px;
+      padding-top:12px;
+      border-top:1px solid rgba(255,255,255,.08);
     }
 
-    .fantasyList {
-      margin: 0;
-      padding-left: 18px;
-    }
-    .fantasyList li {
-      margin: 6px 0;
-    }
-
-    .fantasyRow {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 14px;
+    .smallNote{
+      font-size:12px;
+      opacity:.78;
+      line-height:1.45;
+      margin-top:10px;
     }
 
-    @media (max-width: 720px) {
-      .fantasyRow {
-        grid-template-columns: 1fr;
-      }
-      .fantasyLogoTop {
-        height: 20px;
-      }
-      .fantasyTitle {
-        font-size: 17px;
-      }
+    @media (max-width: 820px){
+      .fantasyRow{ grid-template-columns:1fr; }
+      .fantasyMetaGrid{ grid-template-columns:1fr; }
+      .fantasyLogoTop{ height:24px; }
+      .fantasyTitle{ font-size:19px; }
     }
   </style>
 </head>
@@ -140,101 +153,33 @@
     <!-- Fantasy Football (single large box) -->
     <section class="panel fantasyBig" aria-label="Fantasy Football">
       <div class="fantasyHead">
-        <div class="fantasyHeadLeft">
-          <img
-            src="./assets/National_Football_League_logo.svg.png"
-            alt="NFL logo"
-            class="fantasyLogoTop"
-          />
-          <div class="fantasyTitleWrap">
-            <h2 class="fantasyTitle">Fantasy Football</h2>
-            <p class="fantasySub">NFL.com League — Blitzed and Confused</p>
-          </div>
+        <div class="fantasyTitleWrap">
+          <h2 class="fantasyTitle">Fantasy Football</h2>
+          <p class="fantasySub">NFL.com League — Blitzed and Confused</p>
         </div>
+
+        <!-- logo moved back to the other side (right) -->
+        <img
+          src="./assets/National_Football_League_logo.svg.png"
+          alt="NFL logo"
+          class="fantasyLogoTop"
+        />
       </div>
 
       <div class="fantasyBody">
 
         <div class="fantasySection">
-          <h3>Description</h3>
+          <h3 class="fantasyH3">What this is</h3>
           <p>
-            I am the commissioner of an official <strong>NFL.com</strong> fantasy football custom league called
-            <strong>Blitzed and Confused</strong>.
+            I’m commissioner for an official <strong>NFL.com</strong> fantasy league called <strong>Blitzed and Confused</strong>.
+            This box is the single source of truth for how the league works, what it costs, how payouts work, and how to join.
           </p>
-          <p>
-            This page contains everything you need to know about the league — rules, payouts, settings,
-            results, and how to join.
-          </p>
-          <p>
-            <strong>There are several open spots available for the 2026–27 season.</strong>
-          </p>
-        </div>
 
-        <div class="fantasyRow">
-          <div class="fantasySection">
-            <h3>Snapshot</h3>
-            <ul class="fantasyList">
-              <li>Hosting site: NFL.com</li>
-              <li>League name: Blitzed and Confused</li>
-              <li>League ID: 12709265</li>
-              <li>Draft: Live · Standard · 90 seconds per pick</li>
-              <li>Playoffs: 6 teams · Weeks 15–17</li>
-              <li>Scoring: Half-PPR</li>
-            </ul>
-          </div>
-
-          <div class="fantasySection">
-            <h3>2025–26 Results</h3>
-            <ul class="fantasyList">
-              <li>🏆 <strong>No Malice</strong></li>
-              <li>🥈 Penei for your thoughts</li>
-              <li>🥉 A Bawdy Doodle (me)</li>
-              <li>4th — Jerry Circus</li>
-              <li>5th — Vegas Eaddy</li>
-              <li>6th — Delulu Bears Fan</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="fantasyRow">
-          <div class="fantasySection">
-            <h3>League Rules</h3>
-
-            <p><strong>Format</strong><br />
-              10 teams · Redraft · 4 keepers · Half-PPR · Snake draft
-            </p>
-
-            <p><strong>Playoffs</strong><br />
-              Top 6 · Weeks 15–17 · One-week matchups
-            </p>
-
-            <p><strong>Roster</strong><br />
-              1 QB · 2 RB · 2 WR · 1 TE · 1 Flex · 1 K · 1 DEF<br />
-              Bench: 6 · IR: 3
-            </p>
-
-            <p><strong>Transactions</strong><br />
-              FAAB 100 · Adds: 5/week · Trades: 10/season
-            </p>
-
-            <p><strong>Conduct</strong><br />
-              Competitive lineups required · No collusion · Trash talk allowed
-            </p>
-          </div>
-
-          <div class="fantasySection">
-            <h3>Payouts</h3>
-            <ul class="fantasyList">
-              <li>1st — 60%</li>
-              <li>2nd — 25%</li>
-              <li>3rd — 15%</li>
-            </ul>
-
-            <div style="height:12px;"></div>
-
-            <h3>Entry Fee</h3>
-            <p>All league funds are securely collected and distributed through <strong>LeagueSafe</strong>.</p>
-            <p>Entry fee: <strong>$25 + processing fee</strong></p>
+          <div class="joinRow">
+            <div>
+              <p class="kv"><b>Teams:</b> 10</p>
+              <p class="kv"><b>Format:</b> Redraft + 4 keepers</p>
+            </div>
 
             <a
               href="https://www.leaguesafe.com/join/4351949"
@@ -244,6 +189,86 @@
             >
               Pay Your Dues
             </a>
+          </div>
+
+          <p class="smallNote">
+            Entry fee is required before the draft. League funds are collected and paid out through LeagueSafe.
+          </p>
+        </div>
+
+        <div class="fantasyRow">
+          <div class="fantasySection">
+            <h3 class="fantasyH3">Quick Snapshot</h3>
+
+            <div class="fantasyMetaGrid">
+              <p class="kv"><b>League Name:</b> Blitzed and Confused</p>
+              <p class="kv"><b>League ID:</b> 12709265</p>
+              <p class="kv"><b>Scoring:</b> Half-PPR</p>
+              <p class="kv"><b>Draft:</b> Live • Snake • 90 sec/pick</p>
+              <p class="kv"><b>Season Start:</b> NFL Week 1</p>
+              <p class="kv"><b>Playoffs:</b> 6 teams • Weeks 15–17 • 1 week/round</p>
+              <p class="kv"><b>Adds:</b> 5/week • 35/season</p>
+              <p class="kv"><b>Trades:</b> 10/season • Commissioner approval</p>
+              <p class="kv"><b>Waivers:</b> Budget (100) • 1-day period</p>
+              <p class="kv"><b>Player Locks:</b> Game time</p>
+            </div>
+
+            <p class="smallNote">
+              Tiebreaker: bench points. Waiver priority: move to last after a successful claim.
+            </p>
+          </div>
+
+          <div class="fantasySection">
+            <h3 class="fantasyH3">2025–26 Results</h3>
+            <ul class="fantasyList">
+              <li>🏆 <strong>1st — No Malice</strong> (Reg season: 8–6)</li>
+              <li>🥈 <strong>2nd — Penei for your thoughts</strong> (Reg season: 9–5)</li>
+              <li>🥉 <strong>3rd — A Bawdy Doodle (me)</strong> (Reg season: 10–4)</li>
+              <li>4th — Jerry Circus</li>
+              <li>5th — Vegas Eaddy</li>
+              <li>6th — Delulu Bears Fan</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="fantasyRow">
+          <div class="fantasySection">
+            <h3 class="fantasyH3">Roster</h3>
+            <ul class="fantasyList">
+              <li>Starters: 1 QB • 2 RB • 2 WR • 1 TE • 1 Flex (WR/RB/TE) • 1 K • 1 DEF</li>
+              <li>Bench: 6</li>
+              <li>IR: 3</li>
+              <li>No Superflex • No IDP</li>
+            </ul>
+
+            <div style="height:10px;"></div>
+
+            <h3 class="fantasyH3">Rules + Conduct</h3>
+            <ul class="fantasyList">
+              <li>Competitive lineups required weekly</li>
+              <li>No collusion, tanking, or roster neglect</li>
+              <li>Trash talk is welcome; disrespect isn’t</li>
+              <li>Deadlines matter (payments, trades, keeper locks)</li>
+            </ul>
+          </div>
+
+          <div class="fantasySection">
+            <h3 class="fantasyH3">Money</h3>
+            <p class="kv"><b>Entry Fee:</b> $25 + processing</p>
+            <p class="kv"><b>Payouts:</b> 1st 60% • 2nd 25% • 3rd 15%</p>
+
+            <div style="height:10px;"></div>
+
+            <h3 class="fantasyH3">How to Join</h3>
+            <ol class="fantasyList" style="padding-left:20px;">
+              <li>Pay the LeagueSafe fee using the button above.</li>
+              <li>Send me your LeagueSafe name so I can track payments.</li>
+              <li>I’ll confirm your spot and share league invite details.</li>
+            </ol>
+
+            <p class="smallNote">
+              Trade deadline (per current settings): November 21, 2025. Keepers lock on the league draft date.
+            </p>
           </div>
         </div>
 
